--- a/ProyectoUD02_Concesionario-vista/Concesionario/nbproject/project.properties
+++ b/ProyectoUD02_Concesionario-vista/Concesionario/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Concesionario
 excludes=
+file.reference.Clock.jar=lib/Clock.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.Clock.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
