Añadido archivo Jar a libs y pequeñas correciones en ConexionBD

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,12 +36,12 @@ dist.jlink.output=${dist.jlink.dir}/Concesionario
 endorsed.classpath=
 excludes=
 file.reference.Clock.jar=lib/Clock.jar
-file.reference.mysql-connector-j-8.1.0.jar-1=C:\\Users\\frana\\Downloads\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0.jar
+file.reference.mysql-connector-j-8.1.0.jar=lib\\mysql-connector-j-8.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.Clock.jar}:\
-    ${file.reference.mysql-connector-j-8.1.0.jar-1}
+    ${file.reference.mysql-connector-j-8.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
